# testing

./: README.md  requirements-dochtml.txt  requirements-tests.txt  requirements.txt
backend/: .dockerignore  Dockerfile  MANIFEST.in  pyproject.toml  requirements-mypy.txt  tox.ini
backend/ateme/um_backend/: __init__.py  __main__.py  data_migration_imp.py  database.py  exceptions.py  identity_provider.py  introspection.py  ldap.py  ldap_provider.py  loggers.py  parser.py  request_utils.py  roles_mapper.py  saml_provider.py  updater.py  user_management.py  utils.py
backend/ateme/um_backend/api/: api.yaml
backend/ateme/um_backend/dao/: __init__.py  collection_actions.py  collection_api_descriptors.py  collection_clients.py  collection_configuration.py  collection_scopes.py  collection_tokens.py  collections.py
backend/ateme/um_backend/migration_files/: um_migration.json
backend/ateme/um_backend/sync_schema/: um_sync_data.json
backend/ateme/um_backend/types/: __init__.py  action.py  api_descriptor.py  (+17 more)
backend/tests/: conftest.py  test__find_user_by_headers.py  test_admin.py  test_api_definition.py  test_concurrent_auth_data.py  test_configuration.py  test_data_migration.py  test_database.py  test_default_values.py  test_exceptions.py  test_identity_provider.py  test_ldap.py  test_ldap_provider.py  test_login.py  test_logs.py  test_parallels.py  test_parser.py  test_probes.py  test_request_utils.py  test_resource_policy.py  test_roles_mapper.py  test_saml.py  test_scopes_actions.py  test_token.py  test_token_introspection.py  test_types.py  test_updater.py  test_user_management_internal.py  test_users.py  test_utils.py
backend/tests/dao/: index_utils.py  test_collection_actions.py  test_collection_api_descriptors.py  test_collection_clients.py  test_collection_scopes.py  test_collection_tokens.py
backend/tests/default_data/: apidescriptor.json  apidescriptor_fourth.json  apidescriptor_second.json  apidescriptor_third.json  auth_data_appmgr.json  auth_data_appmgr_no_app_name.json  auth_data_sysm.json  default_scopes.json  default_users.json
backend/tests/definitions/: e2e.yaml  resource_api.yaml  simple_api.yaml  simple_api_usr.yaml  subapp_simple_api.yaml  very_long_api.json
backend/tests/introspector/: test__check_action.py  test__get_content_actions_from_scopes.py  test__resolve_actions.py  test_check_introspection.py  test_utils.py
backend/tests/migration_test_files/: exported_data_file.json  exported_data_file_error.json  imported_data_file_duplicate_key_error.2.json  imported_data_file_duplicate_key_error.json  imported_data_file_invalid_hash.json  imported_data_file_key_error.json  imported_data_file_ok.json  imported_data_file_version_not_found.json  um_collection_validation_error.json  um_migration_validation_empty_filename.json  um_migration_validation_no_collection.json
backend/tests/saml_payload/: okta_saml_response.xml
backend/tests/utils/: __init__.py  data.py
(+276 files in other folders)
